fixed the spacing in circle

--- a/src/components/CircularAnimation.css
+++ b/src/components/CircularAnimation.css
@@ -2,5 +2,5 @@
     transform-origin: -412.5px;
     font-size: 55px;
     white-space: nowrap;
-    margin: 50px 0;
+    margin: 115px 0;
 }
